Update content